--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
     <!-- Google fonts -->
     <link href="https://fonts.googleapis.com/css2?family=Amatic+SC:wght@700&family=Bad+Script&display=swap" rel="stylesheet">
 
-    <title>Compra econômica</title>
+    <title>Gera economia</title>
   </head>
   <body>
-    <img id="logo" src="img/logo.png" alt="Logo">
+    <!-- <img id="logo" src="img/logo.png" alt="Logo"> -->
 
     <form>
 
