1. label changed: Product for Item 2. product class margint-top definition

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <title>Gera economia</title>
   </head>
   <body>
-    
+
     <!-- <img id="logo" src="img/logo.png" alt="Logo"> -->
 
     <form>
@@ -28,7 +28,7 @@
           <!-- Product 1 -->
           <div id="p1" class="product">
 
-            <h1>Produto 1</h1>
+            <h1>Item 1</h1>
 
             <input type="text" id="quantity_1" class="form-control decimal" placeholder="Quantidade" required>
             <div class="invalid-feedback">
@@ -68,7 +68,7 @@
           <!-- Product 2 -->
           <div id="p2" class="product">
 
-            <h1>Produto 2</h1>
+            <h1>Item 2</h1>
 
             <input type="text" id="quantity_2" class="form-control decimal" placeholder="Quantidade" required>
             <div class="invalid-feedback">
