--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" type="text/css" href="css/style.css">
 
     <!-- Google fonts -->
-    <link href="https://fonts.googleapis.com/css2?family=Amatic+SC:wght@700&family=Bad+Script&display=swap" rel="stylesheet">
+    <link href="css/fonts.css" rel="stylesheet">
 
     <title>Gera economia</title>
   </head>
