--- a/index.html
+++ b/index.html
@@ -24,6 +24,12 @@
   </head>
   <body>
 
+    <div class="row">
+      <div class="col-lg-12 text-center">
+        Compare ofertas de produtos e confira qual delas trará economia para seu bolso.
+      </div>
+    </div>
+
     <form>
 
       <div class="row">
@@ -38,7 +44,7 @@
             <div class="invalid-feedback">
               Campo requerido
             </div>
-            
+
 
             <br>
 
@@ -121,6 +127,28 @@
       </div>
 
     </form>
+
+    <br>
+
+    <div class="row">
+      <!-- <div class="offset-lg-2 col-lg-4 text-center"> -->
+      <div class="offset-lg-2 col-lg-8">
+        <!-- <iframe src="https://www1.folha.uol.com.br/mercado/" title="Folha de São Paulo - Mercado Financeiro" width="100%" height="400"></iframe> -->
+        <h2 align="center">ECONOMIA</h2>
+          <p align="justify">
+            Quantas vezes você já começou um ano com objetivo de economizar dinheiro? E quantas vezes você conseguiu?
+            <br>
+            É importante pensar que, em épocas difícies, qualquer valor economizado pode fazer a diferença no futuro. Afinal, de acordo com o velho ditado "de grão em grão, a galinha enche o papo", devemos pensar em cada real gasto no nosso dia a dia, principalmente nos locais que frequentamos várias vezes por semana, como os supermercados.
+            <br>
+            Com isso, o blog "TAMO JUNTO" postou uma matéria interessante sobre esse tema.
+            <br>
+            Confira a seguir: <a href="https://aliancaempreendedora.org.br/tamojunto/5-dicas-sobre-como-economizar-dinheiro/" target="_blank">5 dicas sobre como economizar dinheiro</a>
+          </p>
+      </div>
+      <!-- <div class="col-lg-4 text-center">
+        ...
+      </div> -->
+    </div>
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
